# plus-worker

./: .env.deploy  Dockerfile  README.md  TODO.md  deploy.sh  pyproject.toml  run-task.sh  setup.sh  show_logs.sh  task-definition.json
.github/workflows/: deploy.yml
feaas/: abstract.py  action.py  app.py  collection_processor.py  engine.py  feaas.py  file_processor.py  load_props.py  log_config.py  objects.py  sns_processor.py  stream_processor.py
feaas/actions/: assert.py  compare.py  convert.py  date.py  extract.py  getobject.py  logic.py  math.py  noop.py  psee_validator.py  random.py  string.py
feaas/dao/: abstract_dao.py  abstract_wiring.py  dao.py
feaas/dao/blobstore/: abstract_blobstore.py
feaas/dao/docstore/: abstract_docstore.py  dynamo.py  local.py
feaas/dao/queue/: abstract_queue.py  local.py  sqs.py
feaas/dao/search/: abstract_search.py  elasticsearch.py  localsearch.py  util.py
feaas/dao/stream/: local.py  stream.py
feaas/engines/: aws.py  engine.py
feaas/plus/: plus.py
feaas/portal/: notify.py
feaas/psee/: psee.py  util.py
feaas/router/: router.py
feaas/router/dialogs/: abstract.py  decision_tree.py  (+3 more)
feaas/scheduler/: run_scheduler.py  scheduler.py
feaas/stream/: util.py
feaas/sys/: actions.py  backup.py  executor.py  installer.py  mirror.py  owners.py  scan.py  waiting_summary.py
feaas/util/: actiondns.py  common.py  update_actions.py  updater.py  validator.py
proto/: objs.proto
src/: __init__.py  cli.py  worker.py
src/actions/: __init__.py
test_scripts/: fail.sh  success.sh  test_run_all.py  test_run_stream.py
(+15 files in other folders)
