[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plus-worker"
version = "0.1.0"
description = "AWS Fargate worker for long-running plus-engine actions"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "requests>=2.28.0",
]

[project.scripts]
plus-worker = "src.cli:main"
