[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plus-worker"
version = "0.1.0"
description = "AWS Fargate worker for long-running plus-engine actions"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "croniter>=1.3.0",
    "furl>=2.1.0",
    "markdown2>=2.4.0",
    "plus-core>=1.0.12",
    "plus-engine>=1.0.10",
    "protobuf>=5.29.0",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
]

[project.scripts]
plus-worker = "src.worker:main"
